maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: ';' expected but integer literal found.
            }else if (getY()) >= 1 & getIndication(i,j-1)==9999 && !aMurNord(i,j)){
                                 ^